Fixed overlapping issue + some other visual and UX updates

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -216,8 +216,9 @@ body {
 
 .chat-list__item__header {
     background: #f36523;
-    color: white;
     padding: 0.2rem 0.4rem;
+    color: white;
+    cursor: pointer;
 }
 
 .chat-list__item__header__link {
@@ -225,31 +226,46 @@ body {
     color: white;
 }
 
+.chat-list__item__input {
+    border: none;
+    border-top: 1px solid #f36523;
+    background: #4a4c51;
+    width: 100%;
+    color: white;
+    font-size: 1rem;
+}
+
 .message-list {
     padding: 0.2rem 0.4rem;
+    overflow-y: scroll;
     height: 16rem;
-    width: 13rem;
+    width: 12rem;
 }
 
 .message-list__item {
-    background: #4a4c51;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    padding: 0.1rem 0.4rem;
-    margin: 0.2rem 0;
-    max-width: 75%;
-}
-
-.message-list__item--me {
-    background: #f36523;
-    float: right;
+    width: 100%;
 }
 
 .message-list__item:after {
     display: table;
     content: "";
     clear: both;
+}
+
+.message {
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    padding: 0.1rem 0.3rem 0.2rem;
+    margin: 0.1rem 0;
+    max-width: 75%;
+    background: #4a4c51;
+    float: left;
+}
+
+.message--me {
+    background: #f36523;
+    float: right;
 }
 
 /****************************************************************************
